# pixbridge

./: .envrc.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  justfile  model_config.yaml  pyproject.toml
.github/workflows/: ci.yml
examples/: prompt.yaml
src/pixbridge/: __init__.py  _usage_log.py  cli.py  client.py  config.py  consistency_check.py  integrity_check.py  models.py  size_resolver.py
src/pixbridge/providers/: __init__.py  base.py  gemini.py  openai.py  vertex.py  xai.py
tests/live/: test_providers_live.py  vision_verifier.py
tests/pixbridge/: conftest.py  test_capability_surface.py  test_cli.py  test_client.py  test_config.py  test_consistency_check.py  test_gemini_provider.py  test_integrity_check.py  test_models.py  test_openai_provider.py  test_providers_base.py  test_providers_registry.py  test_size_resolver.py  test_usage_log.py  test_vertex_provider.py  test_xai_provider.py
