[project]
name = "pixbridge"
version = "0.1.1"
description = "Unified multi-provider AI image generation library (Gemini, OpenAI, xAI)"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
    { name = "Jörn Dinkla", email = "joern@dinkla.net" },
]
keywords = ["image-generation", "ai", "gemini", "openai", "xai", "dall-e", "imagen"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.28",
    "pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/jdinkla/pixbridge"
Repository = "https://github.com/jdinkla/pixbridge"
Issues = "https://github.com/jdinkla/pixbridge/issues"
Changelog = "https://github.com/jdinkla/pixbridge/blob/main/CHANGELOG.md"

[project.scripts]
pixbridge = "pixbridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pixbridge"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "types-requests>=2.28",
    "types-Pillow>=10.0",
]

[tool.pytest.ini_options]
markers = [
    "live: hits real provider APIs; opt-in via `pytest -m live` or `just test-live`",
]
addopts = "-m 'not live'"
filterwarnings = [
    # Deprecation inside the google-genai SDK (not our code); remove once the
    # SDK stops aliasing _UnionGenericAlias.
    "ignore:.*_UnionGenericAlias.*:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary-vs-if-else is a style call
    "RUF012",  # ENV_KEYS lists are convention, not meant to mutate
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
python_version = "3.11"
files = ["src/pixbridge"]
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["google.genai.*", "openai.*"]
ignore_missing_imports = true
